# zif

./: .gitignore  Makefile.am  NEWS  README  README.PackageKit  README.transifex  RELEASE  TODO  autogen.sh  bootstrap.sh  configure.ac
.tx/: config
contrib/: dum.spec.in  zif.spec.in
data/: Makefile.am  zif-completion.bash
data/tests/: Makefile.am  clamav-filesystem-0.96.3-1400.fc14.noarch.rpm  compress.txt.bz2  compress.txt.lzma  compress.txt.xz  corrupt-repomd.repo  corrupt-repomd.repo.in  depend-0.1-1.fc13.noarch.rpm  depend.spec  init-rpmdb.sh  invalid.repo  metalink.xml  release.spec  releases.txt  test-0.1-1.fc13.noarch.rpm  test.spec  yum.conf  zif.conf
data/tests/corrupt-repomd/: .gitignore
data/tests/fedora/: .gitignore  filelists.sqlite.bz2  other.sqlite.bz2  primary.sqlite.bz2  repomd.xml  updateinfo.xml
data/tests/preupgrade/: installmirrorlist  releases.txt
data/tests/preupgrade/os/: .treeinfo
data/tests/preupgrade/os/images/: install.img
data/tests/preupgrade/os/images/pxeboot/: initrd.img  vmlinuz
data/tests/repodata/: .gitignore  primary.sqlite.bz2  repomd.xml
data/tests/repos/: fedora-updates.repo  fedora.repo  multiline.repo
data/tests/root/var/lib/rpm/: .gitignore  Basenames  Conflictname  Dirnames  Filedigests  Group  Installtid  Name  Obsoletename  Packages  Providename  Provideversion  Requirename  Requireversion  Sha1header  Sigmd5  Triggername
data/tests/signed-metadata/: repomd.xml  repomd.xml.asc  repomd.xml.key
data/tests/transactions/: Makefile.am  downgrade-with-dep.manifest  downgrade.manifest  get-updates-with-obsolete-multiarch.manifest  get-updates-with-obsolete-subpackage.manifest  get-updates-with-obsolete.manifest  get-updates.manifest  install-arch-to-noarch.manifest  install-exactarch-false.manifest  install-exactarch-true.manifest  install-multiarch-basename-same.manifest  install-multiarch.manifest  install-multiple-provides.manifest  install-onlyn-nothing.manifest  install-onlyn-with-removal.manifest  install-onlyn.manifest  install-provide-dont-downgrade.manifest  install-provide-newer-version.manifest  install-provide-srpm-version.manifest  install-two-that-conflict.manifest  install-when-already-installed.manifest  install-with-conflicted-install.manifest  install-with-conflicted-installed.manifest  install-with-dep-installed.manifest  install-with-dep-multiple-provide-ver.manifest  install-with-dep-multiple.manifest  install-with-dep-native-arch.manifest  install-with-dep-non-numeric.manifest  install-with-dep.manifest  install-with-file-dep.manifest  install-with-highest-arch.manifest  install-with-missing-versioned-dep.manifest  install-with-old-conflicts.manifest  install-with-older-version-installed.manifest  install-with-remote-dep-with-remote-dep.manifest  install-with-update.manifest  install-with-virtual-dep.manifest  install.manifest  parsing-whitespace.manifest  remove-auto-deps-after-install.manifest  (+45 more)
data/tests/yumdb/P/1f5fb652e08cb67412f20d2009565afcc21d1908-PackageKit-gtk-module-0.6.9-4.fc14-i686/: checksum_data
data/tests/yumdb/P/340d7b40b299f2767e9d04eec714faf273dfef75-PackageKit-yum-0.6.9-4.fc14-i686/: checksum_data  installed_by
data/tests/yumdb/P/35302f41c5768ea62100226b6b7d0ee04d3cc9ab-PackageKit-0.6.9-4.fc14-i686/: checksum_data  from_repo_revision  from_repo_timestamp
data/tests/yumdb/P/3e72f1d2d3705c33ca882c531ebc83bf31cdf84e-PackageKit-gstreamer-plugin-0.6.9-4.fc14-i686/: checksum_data
data/tests/yumdb/P/887e490e0d3813912fc90a3d3b0e625aee2bfceb-PackageKit-glib-0.6.9-4.fc14-i686/: checksum_data
data/tests/yumdb/P/97d22df9acd127aab2442a68d48de396fb2fa52b-PackageKit-command-not-found-0.6.9-4.fc14-i686/: checksum_data  releasever
data/tests/yumdb/P/9e82bdc1e15f14af78103cfe12454bab4fc523f0-PackageKit-device-rebind-0.6.9-4.fc14-i686/: checksum_data
data/tests/yumdb/P/a6df14443403915e217ba48c08bb9b0c5abd79e9-PackageKit-glib-devel-0.6.9-4.fc14-i686/: checksum_data  command_line  from_repo_revision  from_repo_timestamp
data/tests/yumdb/P/d480c3e0a8ec754130ec064f550190713ef2cad1-PackageKit-yum-plugin-0.6.9-4.fc14-i686/: checksum_data
docs/: Makefile.am  api.txt
docs/api/: .gitignore  Makefile.am  zif-docs.sgml
docs/api/spec/: zif-faq.xml  zif-introduction.xml
etc/: Makefile.am  zif.conf
examples/: .gitignore  Makefile.am  zif-file-requires.c  zif-list-installed.c  zif-list-repos.c  zif-resolve-newest.py  zif-rhn.c
libdum/: .gitignore  Makefile.am  dum-config.c  dum-config.h  dum-depend-array.c  dum-depend-array.h  dum-depend.c  dum-depend.h  dum-download.c  dum-download.h  dum-groups.c  dum-groups.h  dum-monitor.c  dum-monitor.h  dum-package-internal.h  dum-package-local.c  dum-package-local.h  dum-package-remote.c  dum-package-remote.h  dum-package.c  dum-package.h  dum-repo-md-filelists.c  dum-repo-md-filelists.h  dum-repo-md-master.c  dum-repo-md-master.h  dum-repo-md-primary.c  dum-repo-md-primary.h  dum-repo-md.c  dum-repo-md.h  dum-repos.c  dum-repos.h  dum-sack-local.c  dum-sack-local.h  dum-sack-remote.c  dum-sack-remote.h  dum-sack.c  dum-sack.h  dum-self-test.c  dum-store-local.c  dum-store-local.h  (+12 more)
libzif/: .gitignore  Makefile.am  egg-debug.c  egg-string.c  egg-string.h  egg-test.c  zif-array.c  zif-array.h  zif-category-private.h  zif-category.c  zif-category.h  zif-changeset-private.h  zif-changeset.c  zif-changeset.h  zif-complete.c  zif-complete.h  zif-completion.c  zif-completion.h  zif-config.c  zif-config.h  zif-db.c  zif-db.h  zif-delta-private.h  zif-delta.c  zif-delta.h  zif-depend-array.c  zif-depend-array.h  zif-depend-private.h  zif-depend.c  zif-depend.h  zif-download-private.h  zif-download.c  zif-download.h  zif-groups.c  zif-groups.h  zif-history.c  zif-history.h  zif-legal.c  zif-legal.h  zif-lock.c  (+119 more)
m4/: ax_check_enum.m4
man/: Makefile.am  zif.sgml
po/: .gitignore  LINGUAS  POTFILES.in  Zif.pot  ar.po  bg.po  bg_BG.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  (+30 more)
tools/: .gitignore  Makefile.am  dum-main.c  egg-debug.c  egg-debug.h  pk-progress-bar.c  pk-progress-bar.h  zif-main.c  zif-progress-bar.c  zif-progress-bar.h
(+8 files in other folders)
